force-app/main/default/objects/AnkenMeisai__c/fields/SellInTaxAmount_USD__c.field-meta.xml
<CustomField>
    <fullName>SellInTaxAmount_USD__c</fullName>
    <formula>SellAmountUSD__c + SellTaxNum_USD__c + AmountSellingUSDAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT SELLING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>