force-app/main/default/objects/AnkenMeisai__c/fields/SellInTaxAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>SellInTaxAmountJPY__c</fullName>
    <description>[通貨：JPY]
「商品」の「課税」にチェックが入っている時のみ消費税込みで計算します。

[通貨：USD]
販売単価(USD)*数量*為替レート（Selling）の結果を四捨五入しています

IF (Tariff__r.wkTaxFlag__c, 
     SellAmountJPN__c  *  (1 + TaxInitial__c), 
     SellAmountJPN__c 
)

/----------------------------------------------


ROUND(SellAmountJPN__c  *  (1 + TaxInitial__c) , 0)</description>
    <formula>SellAmountJPN__c + SellTaxNum__c +AmountSellingLocalAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount will be calculated as Total Amount of Selling(Local)+Total Amount of Selling(Local)*Tax Ratio</inlineHelpText>
    <label>AMOUNT SELLING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>