force-app/main/default/objects/AnkenMeisai__c/fields/SellInTaxAmountJPY_NoRound__c.field-meta.xml
<CustomField>
    <fullName>SellInTaxAmountJPY_NoRound__c</fullName>
    <formula>SellAmountJPN__c  *  (1 + TaxInitial__c)+TAX_ADJUSTMENTSELL__c+AmountSellingLocalAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Incl Tax (Local, no round)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>