force-app/main/default/objects/AnkenMeisai__c/fields/SellTankaJPY__c.field-meta.xml
<CustomField>
    <fullName>SellTankaJPY__c</fullName>
    <inlineHelpText>This field is input automatically if there is no manual input.1. It will refer the amount in Unit Price of Selling(Local) in Service Master Object. 2. If not, take the amount =Unit Price of Selling(USD)×Exchange Rate-Selling</inlineHelpText>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>