force-app/main/default/objects/AnkenMeisai__c/fields/SellTaxNum__c.field-meta.xml
<CustomField>
    <fullName>SellTaxNum__c</fullName>
    <formula>ROUND(SellAmountJPN__c * TaxInitial__c,0)+ TAX_ADJUSTMENTSELL__c
/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
clofor_com_cfs__SellAmountJPN__c * clofor_com_cfs__TaxInitial__c+clofor_com_cfs__TAX_ADJUSTMENTSELL__c,
0
)
*/

/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
FLOOR(clofor_com_cfs__SellAmountJPN__c * clofor_com_cfs__TaxInitial__c+clofor_com_cfs__TAX_ADJUSTMENTSELL__c),
0
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of Tax-Selling(Local)=Total Amount of Selling(Local)*Consumption Tax Ratio-Selling(Local)/100 . ***Consumption Tax Ratio-Selling Field shows percentage. **</inlineHelpText>
    <label>AMOUNT OF TAX-SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>