force-app/main/default/objects/AnkenMeisai__c/fields/SerchSyubetu__c.field-meta.xml
<CustomField>
    <fullName>SerchSyubetu__c</fullName>
    <label>SERVICE CATEGORY FOR SEARCH ENGINE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCL輸入</fullName>
                <label>FCL Import</label>
            </value>
            <value>
                <fullName>FCL輸出</fullName>
                <label>FCL Export</label>
            </value>
            <value>
                <fullName>LCL輸入</fullName>
                <label>LCL Import</label>
            </value>
            <value>
                <fullName>LCL輸出</fullName>
                <label>LCL Export</label>
            </value>
            <value>
                <fullName>エア</fullName>
                <label>AIR</label>
            </value>
            <value>
                <fullName>通関輸入</fullName>
                <label>Import Custom Clearance</label>
            </value>
            <value>
                <fullName>通関輸出</fullName>
                <label>Export Custom Clearance</label>
            </value>
            <value>
                <fullName>海外現地費用</fullName>
                <label>Oversea Local Charges</label>
            </value>
            <value>
                <fullName>マスター按分</fullName>
                <label>Master Charges Allocation</label>
            </value>
            <value>
                <fullName>ドレー</fullName>
                <label>Drayage</label>
            </value>
            <value>
                <fullName>配送</fullName>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>倉庫</fullName>
                <label>Warehouse</label>
            </value>
            <value>
                <fullName>実費</fullName>
                <label>At Cost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>