force-app/main/default/objects/AnkenMeisai__c/fields/Shiharaikouza__c.field-meta.xml
<CustomField>
    <fullName>Shiharaikouza__c</fullName>
    <label>BANK ACCOUNT TANSFERED TO(old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>①銀行口座１（取引先に登録口座①）</fullName>
                <default>true</default>
                <label>Pre-registered Bank Account 1</label>
            </value>
            <value>
                <fullName>②銀行口座2（取引先に登録口座②）</fullName>
                <label>Pre-registered Bank Account 2</label>
            </value>
            <value>
                <fullName>③銀行口座3（取引先に登録口座③）</fullName>
                <label>Pre-registered Bank Account 3</label>
            </value>
            <value>
                <fullName>④銀行口座4（取引先に登録口座④）</fullName>
                <label>Pre-registered Bank Account 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>