force-app/main/default/objects/AnkenMeisai__c/fields/Shiiresaki__c.field-meta.xml
<CustomField>
    <fullName>Shiiresaki__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Tariff__r.Supplier__r.Id  , Tariff__r.Supplier__r.Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SERVICE PROVIDER VENDOR</label>
    <type>Text</type>
</CustomField>