force-app/main/default/objects/AnkenMeisai__c/fields/SiharaiKakuninzumi__c.field-meta.xml
<CustomField>
    <fullName>SiharaiKakuninzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only use when full amount is paid. Check box is checked, below updates processed 1.Amount Paid-Buying(Local):Syn with Amount Buying including Tax(Local) 2.Amount Paid-Buying(USD):Syn with Amount Buying including Tax(USD) 3.Unpaid Balance of Buying:&apos;0&apos;</inlineHelpText>
    <label>PAYMENT CONFIRMED-BUYING</label>
    <type>Checkbox</type>
</CustomField>