force-app/main/default/objects/AnkenMeisai__c/fields/SiharaisakiSyubetu__c.field-meta.xml
<CustomField>
    <fullName>SiharaisakiSyubetu__c</fullName>
    <formula>text(PaymentTo__r.Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATEGORY OF PAYMENT TO-BUYING</label>
    <type>Text</type>
</CustomField>