force-app/main/default/objects/AnkenMeisai__c/fields/Summary_of_Billings__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Billings__c</fullName>
    <formula>Name +&apos; | &apos;+  InsatuyouSyohinEng__c +&apos; | &apos;+&apos;Invoice to: &apos;+ Seikyusaki__r.Name +&apos; | &apos;+ TEXT(Tariff__r.SellKingakuJPY__c) +&apos; &apos;+  $Setup.Site_Custom_Settings__c.Local_Currency__c+&apos; | &apos;+&apos;Payment to: &apos;+ PaymentTo__r.Name+ &apos; | &apos;+ TEXT(Tariff__r.BuyKingaku__c) +&apos; &apos;+  $Setup.Site_Custom_Settings__c.Local_Currency__c+&apos; | &apos;+ TEXT(Suryo__c) +&apos; | &apos;+ ChargeUnitInPrint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary of Billings</label>
    <type>Text</type>
</CustomField>