force-app/main/default/objects/AnkenMeisai__c/fields/Suryo__c.field-meta.xml
<CustomField>
    <fullName>Suryo__c</fullName>
    <inlineHelpText>Multiplied to Unit Price of Selling(Buying) and automatically calculates Total Amount of Selling(Buying).</inlineHelpText>
    <label>CHARGE UNIT (TOTAL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>