force-app/main/default/objects/AnkenMeisai__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Service: Active status equals True</inlineHelpText>
    <label>PRICING NAME</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TariffMaster__c.ProductFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Service: Active status equals True</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>Tariff</relationshipName>
    <type>Lookup</type>
</CustomField>