force-app/main/default/objects/AnkenMeisai__c/fields/TAX_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>TAX_ADJUSTMENT__c</fullName>
    <inlineHelpText>Input the difference between the calculated Tax by formula and actual amount from vendor.</inlineHelpText>
    <label>TAX-BUYING ADJUSTMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>