force-app/main/default/objects/AnkenMeisai__c/fields/TAX_ADJUSTMENTSELL__c.field-meta.xml
<CustomField>
    <fullName>TAX_ADJUSTMENTSELL__c</fullName>
    <inlineHelpText>Input the difference between the calculated Tax by formula and actual amount to customer.</inlineHelpText>
    <label>TAX-SELLING ADJUSTMENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>