force-app/main/default/objects/AnkenMeisai__c/fields/TaxInitial__c.field-meta.xml
<CustomField>
    <fullName>TaxInitial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>管理者コメント
2013/09/02
本来はレコード作成時にデフォルトで「0.05」の値を持ち、数式「TaxShow__c」に値を渡して金額系の計算をしていた。
しかし、この項目を普段の運用から手で入力したいとのこと。以下の変更を行う
・デフォルト値を空にする
・ワークフローで値を自動代入する（TaxDefaultの値）

2013/09/10
消費税率に販売用と仕入れ用が必要になるため（例）仕入は免税・販売は課税など
こちらの項目は販売用とする。
【注意】消費税率(販売)のAPI名が
「SellTaxInitial__c」
「TaxInitial__c」な点に注意</description>
    <inlineHelpText>The consumption Tax Ratio will be input automatically when remain Empty. Input the Tax ratio and the amount of value will be changed to amount that included the Tax. For item that is Tax-free or non-Tax, the Tax Ratio will be set 0%.</inlineHelpText>
    <label>CONSUMPTION TAX RATIO-SELLING</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>