force-app/main/default/objects/AnkenMeisai__c/fields/TaxSelling3rdCurrencyAdjust__c.field-meta.xml
<CustomField>
    <fullName>TaxSelling3rdCurrencyAdjust__c</fullName>
    <label>Tax-Selling(3rd Currency)-Adjust</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>