force-app/main/default/objects/AnkenMeisai__c/fields/TaxShow__c.field-meta.xml
<CustomField>
    <fullName>TaxShow__c</fullName>
    <description>数式で使用するための項目</description>
    <formula>IF( ProductTax__c = &apos;課税&apos; ,TaxInitial__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSUMPTION TAX FOR CALCULATION-SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>