force-app/main/default/objects/AnkenMeisai__c/fields/TextFTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>TextFTMSSOID__c</fullName>
    <label>Text F/TMS SO ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>