force-app/main/default/objects/AnkenMeisai__c/fields/TotalAmountofBuying3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuying3rdCurrency__c</fullName>
    <formula>ROUND( Suryo__c * UnitPriceofBuying3rdCurrency__c,3)+ TotalAmountofBuying3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>