force-app/main/default/objects/AnkenMeisai__c/fields/TotalAmountofBuyingLocalAdjust__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocalAdjust__c</fullName>
    <label>Total Amount of Buying(Local)-Adjust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>