force-app/main/default/objects/AnkenMeisai__c/fields/TotalAmountofSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSelling3rdCurrency__c</fullName>
    <formula>ROUND(Suryo__c * UnitPriceofSelling3rdCurrency__c,3) + TotalAmountofSelling3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>