force-app/main/default/objects/AnkenMeisai__c/fields/TotalAmountofSelling3rdCurrencyAdjust__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSelling3rdCurrencyAdjust__c</fullName>
    <label>Total Amount of Selling(3rd Currency)-Ad</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>