force-app/main/default/objects/AnkenMeisai__c/fields/Uncollected_Charge_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Uncollected_Charge_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uncollected Charge Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>