force-app/main/default/objects/AnkenMeisai__c/fields/UnitPriceofSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSelling3rdCurrency__c</fullName>
    <label>Unit Price of Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>