force-app/main/default/objects/AnkenMeisai__c/fields/UNPAID_BALANCE_OF_BUYING_USD__c.field-meta.xml
<CustomField>
    <fullName>UNPAID_BALANCE_OF_BUYING_USD__c</fullName>
    <formula>BuyInTaxAmountUSD__c - AMOUNT_PAID_BUYING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Buying(FCY)=Amount Buying including Tax(FCY)-Amount Paid-Buying(FCY)</inlineHelpText>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>