force-app/main/default/objects/AnkenMeisai__c/fields/UNPAID_BALANCE_OF_SELLING_USD__c.field-meta.xml
<CustomField>
    <fullName>UNPAID_BALANCE_OF_SELLING_USD__c</fullName>
    <formula>SellInTaxAmount_USD__c - AMOUNT_PAID_SELLING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Selling(FCY)=Amount Selling including Tax(FCY)-Amount Received from Customer(FCY)</inlineHelpText>
    <label>Unreceived Balance of Selling(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>