force-app/main/default/objects/AnkenMeisai__c/fields/UnpaidBalance3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalance3rdCurrency__c</fullName>
    <formula>AmountBuyingInclTax3rdCurrency__c -  AmountPaid3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Balance(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>