force-app/main/default/objects/AnkenMeisai__c/fields/UnreceivedBalance3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalance3rdCurrency__c</fullName>
    <formula>AmountSellingInclTax3rdCurrency__c -  AmountReceived3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>