force-app/main/default/objects/AnkenMeisai__c/fields/USDTaxAdjustment__c.field-meta.xml
<CustomField>
    <fullName>USDTaxAdjustment__c</fullName>
    <inlineHelpText>Input the difference between the calculated Tax by formula and actual amount from vendor.</inlineHelpText>
    <label>TAX-BUYING ADJUSTMENT(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>