force-app/main/default/objects/AnkenMeisai__c/fields/USDTaxAdjustmentSell__c.field-meta.xml
<CustomField>
    <fullName>USDTaxAdjustmentSell__c</fullName>
    <inlineHelpText>Input the difference between the calculated Tax by formula and actual amount to customer</inlineHelpText>
    <label>TAX-SELLING ADJUSTMENT(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>