force-app/main/default/objects/AnkenMeisai__c/fields/VAT_INVOICE_ISSUE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_ISSUE_STATUS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field can be modified by below 3 profiles.
-Accountant
-Top Executive
-System Administrator</inlineHelpText>
    <label>SELLING LOCK AFTER VAT INVOICE ISSUE</label>
    <type>Checkbox</type>
</CustomField>