force-app/main/default/objects/AnkenMeisai__c/fields/VAT_INVOICE_TO__c.field-meta.xml
<CustomField>
    <fullName>VAT_INVOICE_TO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose Red Invoice To only when Red Invoice To is different from Invoice To.</inlineHelpText>
    <label>VAT INVOICE TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VATINVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>