force-app/main/default/objects/AnkenMeisai__c/fields/VATratebuying__c.field-meta.xml
<CustomField>
    <fullName>VATratebuying__c</fullName>
    <label>VAT rate-buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VATrate</valueSetName>
    </valueSet>
</CustomField>