force-app/main/default/objects/AnkenMeisai__c/fields/wkDefaultTax__c.field-meta.xml
<CustomField>
    <fullName>wkDefaultTax__c</fullName>
    <defaultValue>0.08</defaultValue>
    <description>ワークフローで使用する項目。</description>
    <label>wkORIGINAL TAX RATE</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>