force-app/main/default/objects/AnkenMeisai__c/fields/wkPayBaseDateInvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>wkPayBaseDateInvoiceTo__c</fullName>
    <formula>text( Seikyusaki__r.PaymentBaseDate__c )</formula>
    <label>wkPayment Base Date-Invoice To</label>
    <type>Text</type>
</CustomField>