force-app/main/default/objects/AnkenMeisai__c/fields/wkPayBaseDatePayTo__c.field-meta.xml
<CustomField>
    <fullName>wkPayBaseDatePayTo__c</fullName>
    <formula>text( PaymentTo__r.PaymentBaseDate__c )</formula>
    <label>wkPayment Base Date-Payment To</label>
    <type>Text</type>
</CustomField>