force-app/main/default/objects/AnkenMeisai__c/fields/wkPayConditionPayTo__c.field-meta.xml
<CustomField>
    <fullName>wkPayConditionPayTo__c</fullName>
    <formula>text( PaymentTo__r.PayConditionFromBase__c )</formula>
    <label>wkPayment Condition-Payment To</label>
    <type>Text</type>
</CustomField>