force-app/main/default/objects/AnkenMeisai__c/fields/wkShireSyubetu__c.field-meta.xml
<CustomField>
    <fullName>wkShireSyubetu__c</fullName>
    <formula>TEXT(PaymentTo__r.Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkSERVICE PROVIDER CATEGORY</label>
    <type>Text</type>
</CustomField>