force-app/main/default/objects/AnkenMeisai__c/fields/wkSuryo__c.field-meta.xml
<CustomField>
    <fullName>wkSuryo__c</fullName>
    <description>帳票表示用の項目です。他の数式やワークフローで使用しないで下さい。</description>
    <formula>TEXT(
 IF ( Suryo__c -  FLOOR(Suryo__c) = 0  , FLOOR(Suryo__c) , Suryo__c)
)

/*
例①1.000の場合
1.000 - 1 = 0 → FLOOR(Suryo__c)を表示

例②2.345の場合
2.345 - 2 ≠ 0→Suryo__cをそのまま表示

他の数式やワークフローの計算値として使わせないため(計算が複雑になるため)
テキスト型にしています。

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkQUANTITY</label>
    <type>Text</type>
</CustomField>