force-app/main/default/objects/AnkenMeisai__c/recordTypes/Consolidation_Cost_allocation.recordType-meta.xml
<RecordType>
    <fullName>Consolidation_Cost_allocation</fullName>
    <active>true</active>
    <description>Choose this record type to create a cost which is allocated from Consolidation Costs.</description>
    <label>Consolidation Cost allocation</label>
</RecordType>