force-app/main/default/objects/AnkenMeisai__c/recordTypes/ConsolidationAllocation.recordType-meta.xml
<RecordType>
    <fullName>ConsolidationAllocation</fullName>
    <active>true</active>
    <description>Allocate Selling and Costs from Consol to FMS Bill</description>
    <label>Consolidation Allocation</label>
</RecordType>