force-app/main/default/objects/AnkenMeisai__c/recordTypes/Selling_Buyging_Standard.recordType-meta.xml
<RecordType>
    <fullName>Selling_Buyging_Standard</fullName>
    <active>true</active>
    <description>Choose this record type to create Invoicing to customers and payment to vendors.</description>
    <label>Selling/Buyging Standard</label>
</RecordType>