force-app/main/default/objects/AnkenMeisai__c/validationRules/LOCK_CHARGE_UNIT_TOTAL.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCK_CHARGE_UNIT_TOTAL</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(Suryo__c),
VAT_INVOICE_ISSUE_STATUS__c  = TRUE
)</errorConditionFormula>
    <errorDisplayField>Suryo__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>