force-app/main/default/objects/AnkenMeisai__c/validationRules/LOCK_EXRATE_SELLING.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCK_EXRATE_SELLING</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED( KawaseSel__c ),
VAT_INVOICE_ISSUE_STATUS__c  = TRUE
)</errorConditionFormula>
    <errorDisplayField>KawaseSel__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>