force-app/main/default/objects/AnkenMeisai__c/validationRules/LOCK_TAX_SELLING_RATE.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCK_TAX_SELLING_RATE</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
ISCHANGED( TaxInitial__c ), 
VAT_INVOICE_ISSUE_STATUS__c = TRUE 
)</errorConditionFormula>
    <errorDisplayField>TaxInitial__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>