force-app/main/default/objects/AnkenMeisai__c/validationRules/LOCK_UNIT_PRICE_LOCAL.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCK_UNIT_PRICE_LOCAL</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(SellTankaJPY__c),
VAT_INVOICE_ISSUE_STATUS__c  = TRUE
)</errorConditionFormula>
    <errorDisplayField>SellTankaJPY__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>