force-app/main/default/objects/AnkenMeisai__c/validationRules/LOCK_USD_UNITPRICE_LOCAL.validationRule-meta.xml
<ValidationRule>
    <fullName>LOCK_USD_UNITPRICE_LOCAL</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED( SellTankaUSD__c),
VAT_INVOICE_ISSUE_STATUS__c  = TRUE
)</errorConditionFormula>
    <errorDisplayField>SellTankaUSD__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>