force-app/main/default/objects/AnkenMeisai__c/validationRules/Lock_When_SO_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_When_SO_Locked</fullName>
    <active>true</active>
    <description>旧）CONTAINS( Recordtype__c ,&quot;ロック&quot;)</description>
    <errorConditionFormula>AND 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR
(
ISCHANGED(Suryo__c), 
ISCHANGED(SellTankaJPY__c),
ISCHANGED(PrintFlag__c),
ISCHANGED(SeikyuBangou__c),
ISCHANGED(TorihikisakiLink__c),
ISCHANGED(Recordtype__c),
ISCHANGED(Seikyusaki__c),
ISCHANGED(PaymentTo__c),
ISCHANGED(PaymentToRelationshipType__c),
ISCHANGED(ApprovalStatus__c),
ISCHANGED(SalesAccountedDateInvoicing__c),
ISCHANGED(TextFTMSSOID__c),
ISCHANGED(curr__c),
ISCHANGED(CurrencyBuying__c),
ISCHANGED(ExchangeRateID__c),
ISCHANGED(ExchangeRateIDVAT__c),
ISCHANGED(KawaseSel__c),
ISCHANGED(KawaseBay__c),
ISCHANGED(ExchangeRateSellingVAT__c),
ISCHANGED(ExchangeRateBuyingVAT__c),
ISCHANGED(ExchangeRateSellingUpdate__c),
ISCHANGED(ExchangeRateBuyingUpdate__c),
ISCHANGED(CurrencyConversionSelling__c),
ISCHANGED(CurrencyConversionBuying__c),
ISCHANGED(Tariff__c),
ISCHANGED(InsatuyouSyohin__c),
ISCHANGED(ContainerID__c),
ISCHANGED(InsatuyouSyohinEng__c),
ISCHANGED(Description__c),
ISCHANGED(BillNameForInternal__c),
ISCHANGED(Bikou__c),
ISCHANGED(Suryo__c),
ISCHANGED(ChargeUnitInPrint__c),
ISCHANGED(ChargeUnit__c),
ISCHANGED(ContainerSize__c),
ISCHANGED(TaxInitial__c),
ISCHANGED(BuyTaxInitial__c),
ISCHANGED(SellTankaJPY__c),
ISCHANGED(SellTankaUSD__c),
ISCHANGED(TAX_ADJUSTMENTSELL__c),
ISCHANGED(USDTaxAdjustmentSell__c),
ISCHANGED(AmountSellingLocalAdjustment__c),
ISCHANGED(AmountSellingUSDAdjustment__c),
ISCHANGED(ADVANCE_PAYMENT_ON_BEHALF_OF__c),
ISCHANGED(AdjustedAfterClosingSelling__c),
ISCHANGED(VAT_INVOICE_ISSUE_STATUS__c),
ISCHANGED(CollectDueDateAutoSetting__c),
ISCHANGED(CollectionDueDate__c),
ISCHANGED(BuyTankaJPY__c),
ISCHANGED(BuyTankaUSD__c),
ISCHANGED(TAX_ADJUSTMENT__c),
ISCHANGED(USDTaxAdjustment__c),
ISCHANGED(AmountBuyingLocalAdjustment__c),
ISCHANGED(AmountBuyingUSDAdjustment__c),
ISCHANGED(AdvancePaymentOnBehalfOfOurCompany__c),
ISCHANGED(AdjustedAfterClosingBuying__c),
ISCHANGED(PayDueDateAutoSetting__c),
ISCHANGED(PaymentDueDate__c),
ISCHANGED(Payer__c),
ISCHANGED(NyukinKakuninzumi__c),
ISCHANGED(ReceiptanceDate_del__c),
ISCHANGED(BANKTRANSITTYPE__c),
ISCHANGED(Nyukingaku__c),
ISCHANGED(AMOUNT_PAID_SELLING_USD__c),
ISCHANGED(BankAccountForReceiving__c),
ISCHANGED(SellDetail__c),
ISCHANGED(BadDebtCheckBox__c),
ISCHANGED(BadDebt__c),
ISCHANGED(BadDebtAging__c),
ISCHANGED(BadDebtorType__c),
ISCHANGED(actual_payer__c),
ISCHANGED(SiharaiKakuninzumi__c),
ISCHANGED(BeneficiaryBuyingContact__c),
ISCHANGED(payment_category__c),
ISCHANGED(PaymentDate__c)
),
OR
(
CONTAINS(Anken__r.RecordType.DeveloperName,&quot;lock&quot;),
CONTAINS(Anken__r.RecordType.DeveloperName,&quot;Lock&quot;) 
)
)</errorConditionFormula>
    <errorMessage>This record is locked! Please contact your administrator or supervisor for further information.</errorMessage>
</ValidationRule>