force-app/main/default/objects/AnkenMeisai__c/validationRules/Lock_When_SO_Locked_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_When_SO_Locked_2</fullName>
    <active>true</active>
    <description>旧）CONTAINS( Recordtype__c ,&quot;ロック&quot;)</description>
    <errorConditionFormula>AND 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
OR
(
ISCHANGED(Siharaigaku__c),
ISCHANGED(AMOUNT_PAID_BUYING_USD__c),
ISCHANGED(BankAccountForPayment__c),
ISCHANGED(BuyDetail__c),
ISCHANGED(SellingBankTransactionCode__c),
ISCHANGED(BuyingBankTransactionCode__c),
ISCHANGED(SellACSetProcess__c),
ISCHANGED(BuyACSetProcess__c),
ISCHANGED(SellingDebitAccountingCode__c),
ISCHANGED(SellingCreditAccoutingCode__c),
ISCHANGED(BuyingDebitAccoutingCode__c),
ISCHANGED(BuyingCreditAccountingCode__c),
ISCHANGED(SellingVATDebitAccountingCode__c),
ISCHANGED(SellingVATCreditAccountingcode__c),
ISCHANGED(BuyingVATDebitAccountingCode__c),
ISCHANGED(BuyingVATCreditAccountingCode__c),
ISCHANGED(AccountingClosingStatus__c),
ISCHANGED(OutboundVATInvNo__c),
ISCHANGED(InboundVATInvNo__c),
ISCHANGED(QuoteLineID__c),
ISCHANGED(DataUpdateStatusBillToQL__c),
ISCHANGED(BillDataUpdateTime__c)
),
OR
(
CONTAINS(Anken__r.RecordType.DeveloperName,&quot;lock&quot;),
CONTAINS(Anken__r.RecordType.DeveloperName,&quot;Lock&quot;) 
)
)</errorConditionFormula>
    <errorMessage>This record is locked! Please contact your administrator or supervisor for further information.</errorMessage>
</ValidationRule>