force-app/main/default/objects/AnkenMeisai__c/validationRules/Prevent_deleted_billing.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_deleted_billing</fullName>
    <active>true</active>
    <description>f trx plan is approved already</description>
    <errorConditionFormula>Billingisdeleted__c =TRUE</errorConditionFormula>
    <errorMessage>This F/TMS Bill is connected to approved Trx Plan already. You cannot delete it!</errorMessage>
</ValidationRule>