force-app/main/default/objects/AnkenMeisai__c/validationRules/test.validationRule-meta.xml
<ValidationRule>
    <fullName>test</fullName>
    <active>false</active>
    <errorConditionFormula>Cargo_status_is_changed__c = false</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>